@@ -14,22 +14,24 @@ import pizzicato.model.Pizza;
 import pizzicato.model.dao.PizzaDAO;
 
 
-@WebServlet("/LisaaPizzaServlet")
+@WebServlet("/LisaaPizza")
 public class LisaaPizzaServlet extends HttpServlet {
 	private static final long serialVersionUID = 1L;
    
 	protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
-		String jsp ="/view/Lisaa_tai_muokkaa_pizza.jsp";
+		String jsp ="/view/lisaa_pizza.jsp";
 		RequestDispatcher dispather = getServletContext().getRequestDispatcher(jsp);
 		dispather.forward(request, response);
 	}
 
 	protected void doPost(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
-		String p_nimi = request.getParameter("p_nimi");
-		String strP_hinta = request.getParameter("p_hinta");
-		Double p_hinta = new Double(strP_hinta);
+		String pNimi = request.getParameter("nimi");
+		String strPHinta = request.getParameter("hinta");
+		Double pHinta = new Double(strPHinta);
+		String strPSaatavuus = request.getParameter("saatavuus");
+		boolean pSaatavuus = Boolean.valueOf("strPSaatavuus");
 		
-		Pizza pizza = new Pizza();
+		Pizza pizza = new Pizza(pNimi, pHinta, pSaatavuus);
 		PizzaDAO pizzadao = new PizzaDAO();
 		try {
 			pizzadao.addPizza(pizza);
@@ -37,8 +39,7 @@ public class LisaaPizzaServlet extends HttpServlet {
 			System.out.println("Sovelluksessa tapahtui virhe "+ e.getMessage());
 			e.printStackTrace();
 		}
-		response.sendRedirect("ListaaPizzatServlet");
-		//testi2
+		response.sendRedirect("ListaaPizzat");
 	}
-
+//testi
 }
